Bug 51222 - PIVOTTABLE: user defined subtotals do not work
Summary: PIVOTTABLE: user defined subtotals do not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-19 00:17 UTC by Nikos
Modified: 2012-07-05 08:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
A simple pivot table demonstrating the bug (10.74 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-19 00:17 UTC, Nikos
Details
Comparative 3.5.5.1 and 3.6.0.beta2 (256.00 KB, image/png)
2012-06-26 15:57 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos 2012-06-19 00:17:14 UTC
Created attachment 63207 [details]
A simple pivot table demonstrating the bug

Steps to reproduce:
1. Create a simple table with more
2. Create pivot table and go into "edit layout"
3. Put two fields in the "row fields" area and one in the "data field" area
4. Doubleclick on one of the row fields and select user defined

Expected behavior:
A field should appear where you can select sum as custom operation and then subtotals should appear in the pivot table.
Actual behavior:
None
Comment 1 raal 2012-06-23 22:51:31 UTC
Reproducible on Linux, LO 3.6beta2
Comment 2 Nikos 2012-06-26 10:43:24 UTC
My initial test was on Windows7 with 3.6beta1 (and 2). I also have a similar problem with 3.5.5RC1 on linux. In the latter case the selection field appears, but the subtotals are not shown in the pivot table. Moreover, when I go back to "edit layout" and double click on the row field, subtotals are reset to none.
Comment 3 Nikos 2012-06-26 10:48:30 UTC
Please ignore the last comment, it was a one time thing on 3.5.5RC1, no problem there. Sorry.
Comment 4 m_a_riosv 2012-06-26 13:40:04 UTC
OS: Win7x64 Ultimate
Reproducible with: Version 3.6.0.0.beta2 (Build ID: f010139)
Not reproducible with: LibreOffice 3.5.5.1 c9944f7-48b7ff5-0507789-54a4c8a-8b242a8
Comment 5 m_a_riosv 2012-06-26 15:57:13 UTC
Created attachment 63498 [details]
Comparative 3.5.5.1 and 3.6.0.beta2
Comment 6 Kohei Yoshida 2012-07-02 11:36:48 UTC
I'll look into it.
Comment 7 Not Assigned 2012-07-02 13:51:36 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27e0c7ae315006fbf2488d9ad4df1263134625f0

fdo#51222: Use multi-list box for subtotal dialog.
Comment 8 Not Assigned 2012-07-02 13:51:59 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=053832f8dc453b408d33028e58b7357b29041ae3&g=libreoffice-3-6

fdo#51222: Use multi-list box for subtotal dialog.


It will be available in LibreOffice 3.6.
Comment 9 Kohei Yoshida 2012-07-02 14:06:24 UTC
This is now fixed.