fdo#51222: Use multi-list box for subtotal dialog.

Change-Id: I22cb3b66d0c4a93cbcba05bb5990080e5ee57a2e